<?xml version="1.0"?>
<package format="2">
  <name>jackal_control</name>
  <version>0.0.0</version>
  <description>rospy package to control Jackal</description>
  <maintainer email="reallynitin@gmail.com">nitin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
</package>